<resources>
    <string name="app_name">Complaints</string>

    <string name="branch_name">Choose your Branch</string>
    <string name="name">Name</string>
    <string name="year">Year</string>
    <string name="complaints">Complaints</string>
    <string name="hostel">Hostel</string>
    <string name="describe">Describe your issue</string>
    <string name="load">Please wait</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="Symbiosis">Symbiosis</string>
    <string name="complain">Complain</string>

    <string-array name="branch_name">
        <item>IT</item>
        <item>CSE</item>
        <item>Mechanical</item>
        <item>Electrical</item>
        <item>Electronics</item>
        <item>Civil</item>
    </string-array>

    <string-array name="year">
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
    </string-array>

    <string-array name="hostel">
        <item>A Block</item>
        <item>B Block</item>
        <item>C Block</item>
        <item>D Block</item>
    </string-array>

    <string-array name="complaints">
        <item>Water</item>
        <item>Room</item>
        <item>Food</item>
        <item>Electrical</item>
    </string-array>

    <string-array name="water">
        <item>Drains clogging</item>
        <item>No water</item>
        <item>Taps Broken</item>
        <item>Water Leakage</item>
        <item>Dirty drinking water</item>
        <item>No hot water</item>
    </string-array>

    <string-array name="room">
        <item>Room uncleaned</item>
        <item>Damaged Parts</item>
        <item>Paints coming off</item>
        <item>Broken Walls/Ceiling</item>
        <item>Mice in room</item>
        <item>Mosquito/Insect problems</item>
        <item>Broken Door</item>
        <item>Broken Window</item>
    </string-array>

    <string-array name="food">
        <item>Unhygienic food</item>
        <item>Bad Taste</item>
        <item>Less Quantity</item>
        <item>Old Foods being supplied</item>
        <item>Insects in food</item>
        <item>Quality compromised</item>
    </string-array>

    <string-array name="Electricity">
        <item>Tube Fused</item>
        <item>Bulb fused</item>
        <item>Fans slow/not working</item>
        <item>Damaged socket</item>
        <item>Bad earthing</item>
        <item>Short Circuit</item>
        <item>Blown Fuse</item>
        <item>No supply</item>
    </string-array>

    <string name="title_activity_students_page">StudentsPage</string>
    <string name="tab_text_2">PREVIOUS</string>
    <string name="tab_text_3">STATUS</string>
    <string name="not_found_your_problem">Not Found your problem ?</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="please_describe_your_problem">Please describe your problem</string>
    <string name="enter_here">Enter here</string>
    <string name="done">Done</string>
    <string name="defaultComplaints">Default Complains</string>
    <string name="branch">Branch</string>
    <string name="complain_type">Complain Type</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="name_hint">Name</string>
    <string name="sample_text">Sample Text</string>
    <string name="enable_mint_theme">Enable Mint Theme</string>

</resources>
