<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="450dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_margin="10dp"
            android:background="@null"
            android:gravity="center"
            android:autofillHints=""
            android:hint="@string/name"
            android:backgroundTint="@color/colorPrimary"
            android:backgroundTintMode="add"
            android:inputType="text" />

        <Spinner
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:dropDownWidth="match_parent"
            android:entries="@array/year"
            android:prompt="@string/year"
            android:spinnerMode="dialog"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/branch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:backgroundTint="#7E7676"
            android:dropDownWidth="match_parent"
            android:entries="@array/branch_name"
            android:prompt="@string/branch_name"
            android:spinnerMode="dialog"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/hostel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:dropDownWidth="wrap_content"
            android:entries="@array/hostel"
            android:prompt="@string/hostel"
            android:spinnerMode="dialog"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/complainttype"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:dropDownWidth="match_parent"
            android:entries="@array/complaints"
            android:prompt="@string/complaints"
            android:spinnerMode="dialog"
            android:textAlignment="center" />

        <Button
            android:id="@+id/complain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complain"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            style="Widget.AppCompat.Button.Colored"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/describe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/not_found_your_problem" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/submit" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>