<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoadComplaints"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/complainType"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:textAlignment="center"
            app:ms_hint="@string/complaints" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/defaultComplains"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:textAlignment="center"
            app:ms_hint="@string/defaultComplaints" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/done" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>